RESOLVED FIXED47590
Missing parameters for bytecode dump of next_pname
https://bugs.webkit.org/show_bug.cgi?id=47590
Summary Missing parameters for bytecode dump of next_pname
Xan Lopez
Reported 2010-10-13 06:49:40 PDT
Not only a bunch of parameters are missing, but the parameter used for the offset value is the wrong one, giving bogus values in the dump.
Attachments
parametersnextpname.diff (2.36 KB, patch)
2010-10-13 06:51 PDT, Xan Lopez
no flags
Xan Lopez
Comment 1 2010-10-13 06:51:04 PDT
Created attachment 70606 [details] parametersnextpname.diff
Csaba Osztrogonác
Comment 2 2010-10-13 08:33:46 PDT
Comment on attachment 70606 [details] parametersnextpname.diff Good cactch, thx for the fix.
Xan Lopez
Comment 3 2010-10-13 08:39:55 PDT
Comment on attachment 70606 [details] parametersnextpname.diff Landed as r69665.
Note You need to log in before you can comment on or make changes to this bug.