2010-10-13  Xan Lopez  <xlopez@igalia.com>

Reviewed by Csaba Osztrogonác.

        Missing parameters for bytecode dump of next_pname
        https://bugs.webkit.org/show_bug.cgi?id=47590

        * bytecode/CodeBlock.cpp:
        (JSC::CodeBlock::dump): add missing parameters to the dump.

Canonical link: https://commits.webkit.org/60258@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69665 268f45cc-cd09-0410-ab3c-d52691b4dbfc